spacing issues and colors

--- a/css/home.css
+++ b/css/home.css
@@ -152,7 +152,7 @@ section.copy {
   }
   .mobile-nav  {
     list-style-type: none; /*to remove bullets*/
-    padding:20px 0 40px;
+    padding:10px 0;
   }
   li.plank{
     line-height:60px;
